Add: blanck attribute to linksite

--- a/biografia.html
+++ b/biografia.html
@@ -22,7 +22,7 @@
             Nel 1480 fa parte dell’accademia del Giardino di S. Marco sotto il patrocinio di Lorenzo il Magnifico. È
             il primo approccio di Leonardo con la scultura. Sempre un quell’anno riceve l’incarico di dipingere
             <strong>l’Adorazione dei Magi </strong>per la chiesa di S. Giovanni Scopeto appena fuori Firenze (oggi quest’opera si
-            trova agli <a href="https://www.uffizi.it/">Uffizi</a>).
+            trova agli <a target="_blank" href="https://www.uffizi.it/">Uffizi</a>).
             </p>
             <div class="img-container">
                 <img src="./img/donnaebambino.png" alt="donnaebambino">
@@ -79,7 +79,7 @@
         <section>
             <h2>La biblioteca di Leonardo</h2>
             <p>
-                La <a href="http://www.bibliotecaleonardiana.it/bbl/home.shtml">biblioteca di Leonardo</a> venne lasciata in eredità al fedelissimo Francesco Melzi che, all'indomani
+                La <a target="_blank" href="http://www.bibliotecaleonardiana.it/bbl/home.shtml">biblioteca di Leonardo</a> venne lasciata in eredità al fedelissimo Francesco Melzi che, all'indomani
                 della scomparsa del suo maestro, si trasferì da Amboise alla propria villa di famiglia a Vaprio d’Adda,
                 portando con sé libri, manoscritti e strumenti di bottega appartenuti a Leonardo.
                 biografia.html
