--- a/studi.html
+++ b/studi.html
@@ -22,7 +22,7 @@
                 <p>Esempio di disegno Leonardesco</p>
             </div>
             <p>Con i suoi disegni di straordinaria chiarezza ed efficacia Leonardo ci dà un’immagine di se stesso,
-                dell’uomo che, formatosi in una delle città più vive e stimolanti del suo tempo quale era <a href="https://www.comune.fi.it/">Firenze</a>, iniziò a
+                dell’uomo che, formatosi in una delle città più vive e stimolanti del suo tempo quale era <a target="_blank" href="https://www.comune.fi.it/">Firenze</a>, iniziò a
                 percorrere una strada autonoma di ricerca ed elaborazione di idee e di progetti che toccavano molti
                 settori, dall’idraulica alla meccanica, dal volo all’anatomia, all’ottica.</p>
             
