--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INDEX</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    <div class="container">
-        <section>
+<body class="biografia">
+    <div class="container ">
+        <section class="d-flex flex-column">
             <h1>Il Museo Di Leonardo</h1>
-            <p>Leonardo è uno dei massimi esponenti dell’unione tra umanesimo e scienza. Uomo d’ingegno e talento
+            <p class="mt-3">Leonardo è uno dei massimi esponenti dell’unione tra umanesimo e scienza. Uomo d’ingegno e talento
                 universale del Rinascimento italiano; fu pittore, scultore, architetto, ingegnere, matematico, anatomista,
                 musicista, inventore e scienziato. Incarnò a pieno lo spirito universalista della sua epoca, portandolo alle
                 maggiori forme di espressione nei più disparati campi dell’arte e della conoscenza. È considerato uno dei
                 più grandi geni dell’umanità.
             </p>
-            <img src="./img/barba.png" alt="">
-            <p>Leonardo - Autoritratto</p>
+            <div class="img-container ms-5">
+                <img class="barba" src="./img/barba.png" alt="">
+                <p>Leonardo - Autoritratto</p>
+            </div>
+            
         </section>
         <section>
-            <h2>Menù Principale</h2>
-            <ul>
-                <li><a href="./biografia.html">Biografia</a></li>
-                <li><a href="./studi.html">Studi</a></li>
-                <li><a href="./manoscritti.html">Manoscritti</a></li>
+            <h2 class="text-info">Menù Principale</h2>
+            <ul >
+                <li class="fs-5"><a href="./biografia.html">Biografia</a></li>
+                <li class="fs-5"><a href="./studi.html">Studi</a></li>
+                <li class="fs-5"><a href="./manoscritti.html">Manoscritti</a></li>
             </ul>
         </section>
     </div>
